force-app/main/default/objects/LiveAgent_Custom_Message__c/LiveAgent_Custom_Message__c.object-meta.xml
<CustomObject>
    <description>This is the Custom Messages for display on the Live Agent Pre-Chat form</description>
    <label>LiveAgent Custom Message</label>
    <nameField>
        <displayFormat>LACM-{00000000}</displayFormat>
        <label>Live Agent Custom Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LiveAgent Custom Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>