force-app/main/default/objects/LiveAgent_Custom_Message__c/fields/Custom_Message__c.field-meta.xml
<CustomField>
    <fullName>Custom_Message__c</fullName>
    <description>Custom Message</description>
    <label>Custom Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>