force-app/main/default/objects/LiveAgent_Custom_Message__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>End date time</description>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>