force-app/main/default/objects/LiveAgent_Custom_Message__c/fields/LiveAgent_Button__c.field-meta.xml
<CustomField>
    <fullName>LiveAgent_Button__c</fullName>
    <description>Live Agent Queues</description>
    <label>LiveAgent Button</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent Offline</fullName>
            </value>
            <value>
                <fullName>ASU_Services_Live_Chat</fullName>
            </value>
            <value>
                <fullName>Blackboard_Live_Chat</fullName>
            </value>
            <value>
                <fullName>Canvas_Live_Chat</fullName>
            </value>
            <value>
                <fullName>Finances_Live_Chat</fullName>
            </value>
            <value>
                <fullName>ISSC_Chat</fullName>
            </value>
            <value>
                <fullName>Memorial_Union_Live_Chat</fullName>
            </value>
            <value>
                <fullName>New_Student_Programs_Live_Chat</fullName>
            </value>
            <value>
                <fullName>Non_Authenticated_Live_Chat</fullName>
            </value>
            <value>
                <fullName>Open_Scale_Authenticated_Live_Chat</fullName>
            </value>
            <value>
                <fullName>Open_Scale_Unauthenticated_Live_Chat</fullName>
            </value>
            <value>
                <fullName>Recruitment_First_Year</fullName>
            </value>
            <value>
                <fullName>Recruitment_REC_Team</fullName>
            </value>
            <value>
                <fullName>Recruitment_REC_Team_Unauthenticated</fullName>
            </value>
            <value>
                <fullName>Recruitment_Veterans</fullName>
            </value>
            <value>
                <fullName>Recruitment_Veterans_Unauthenticated</fullName>
            </value>
            <value>
                <fullName>Registrar_Live_Chat</fullName>
            </value>
            <value>
                <fullName>SOLS_Grad_Live_Chat</fullName>
            </value>
            <value>
                <fullName>SOLS_Grad_Unauthenticated_Live_Chat</fullName>
            </value>
            <value>
                <fullName>Sun_Devil_Fitness</fullName>
            </value>
            <value>
                <fullName>Technical_Support_Live_Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>