force-app/main/default/objects/LiveAgent_Custom_Message__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Start Date and time for message to display</description>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>