force-app/main/default/objects/LiveAgent_Custom_Message__c/recordTypes/Admission_Services.recordType-meta.xml
<RecordType>
    <fullName>Admission_Services</fullName>
    <active>true</active>
    <description>Record type for Admission Services Custom Messages for Live Chat</description>
    <label>Admission Services</label>
</RecordType>