force-app/main/default/objects/LiveAgent_Custom_Message__c/recordTypes/CLAS_SOLS.recordType-meta.xml
<RecordType>
    <fullName>CLAS_SOLS</fullName>
    <active>true</active>
    <description>Record type for CLAS - SOLS Custom Messages for Live Chat</description>
    <label>CLAS - SOLS</label>
</RecordType>