force-app/main/default/objects/LiveAgent_Custom_Message__c/recordTypes/Help_Desk.recordType-meta.xml
<RecordType>
    <fullName>Help_Desk</fullName>
    <active>true</active>
    <description>Record type for Help Desk Custom Messages for Live Chat</description>
    <label>Help Desk</label>
</RecordType>