force-app/main/default/objects/LiveAgent_Custom_Message__c/recordTypes/International_Students_and_Scholars_Center.recordType-meta.xml
<RecordType>
    <fullName>International_Students_and_Scholars_Center</fullName>
    <active>true</active>
    <description>Record type for ISSC Custom Messages for Live Chat</description>
    <label>International Students and Scholars Center</label>
</RecordType>