force-app/main/default/objects/LiveAgent_Custom_Message__c/recordTypes/MU_Information_Desk.recordType-meta.xml
<RecordType>
    <fullName>MU_Information_Desk</fullName>
    <active>true</active>
    <description>Record type for MU Custom Messages for Live Chat</description>
    <label>MU Information Desk</label>
</RecordType>