force-app/main/default/objects/LiveAgent_Custom_Message__c/recordTypes/New_Student_Programs.recordType-meta.xml
<RecordType>
    <fullName>New_Student_Programs</fullName>
    <active>true</active>
    <description>Record type for New Student Programs Custom Messages for Live Chat</description>
    <label>New Student Programs</label>
</RecordType>