force-app/main/default/objects/LiveAgent_Custom_Message__c/recordTypes/Offline.recordType-meta.xml
<RecordType>
    <fullName>Offline</fullName>
    <active>true</active>
    <description>Record type for the Offline Custom Messages for Live Chat</description>
    <label>Offline</label>
</RecordType>