force-app/main/default/objects/LiveAgent_Custom_Message__c/recordTypes/Registrar.recordType-meta.xml
<RecordType>
    <fullName>Registrar</fullName>
    <active>true</active>
    <description>Record type for Registrar Custom Messages for Live Chat</description>
    <label>Registrar</label>
</RecordType>