force-app/main/default/objects/LiveAgent_Custom_Message__c/recordTypes/Sun_Devil_Fitness.recordType-meta.xml
<RecordType>
    <fullName>Sun_Devil_Fitness</fullName>
    <active>true</active>
    <description>Record type for Sun Devil Fitness Custom Messages for Live Chat</description>
    <label>Sun Devil Fitness</label>
</RecordType>