force-app/main/default/objects/LiveAgent_Custom_Message__c/recordTypes/Universal_Learner_Courses.recordType-meta.xml
<RecordType>
    <fullName>Universal_Learner_Courses</fullName>
    <active>true</active>
    <description>Record type for Universal Learner Courses Custom Messages for Live Chat</description>
    <label>Universal Learner Courses</label>
</RecordType>