force-app/main/default/objects/LiveAgent_Custom_Message__c/validationRules/Agent_Offline_Button_Sys_Admin.validationRule-meta.xml
<ValidationRule>
    <fullName>Agent_Offline_Button_Sys_Admin</fullName>
    <active>true</active>
    <description>Only System Administrators can set the Agent Offline chat message.</description>
    <errorConditionFormula>AND( $Profile.Id &lt;&gt; '00ed00000017Iob',
ISPICKVAL( ( LiveAgent_Button__c ), "Agent Offline" ))</errorConditionFormula>
    <errorDisplayField>LiveAgent_Button__c</errorDisplayField>
    <errorMessage>Only System Administrators can set the Agent Offline chat message. Please contact Salesforce.Support@asu.edu if this needs to be changed.</errorMessage>
</ValidationRule>