force-app/main/default/objects/LiveAgent_Custom_Message__c/listViews/SD_Fitness_Live_Chat_Custom_Messages.listView-meta.xml
<ListView>
    <fullName>SD_Fitness_Live_Chat_Custom_Messages</fullName>
    <columns>NAME</columns>
    <columns>LiveAgent_Button__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Custom_Message__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>LiveAgent_Custom_Message__c.Sun_Devil_Fitness</value>
    </filters>
    <label>SD Fitness - Live Chat Custom Messages</label>
    <sharedTo>
        <group>Sun_Devil_Fitness_Case</group>
        <group>UTO_Administration</group>
        <role>S_Service</role>
    </sharedTo>
</ListView>